--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="navbarContainer">
 
         <div id="content">
-            <div id="icon"><a href="#1"><img src="/resources/icon/icon.png" height="50px" width="50px"></a></div>
+            <div id="icon"><a href="#1"><img src="/resources/icon/icon.png" height="40px" width="40px"></a></div>
             <div id="list">
                 <ul>
                     <li><a href="#1">Home</a></li>
@@ -36,7 +36,7 @@
         <div class="sectionContainer" id="homeContainer"></div>
 
         <div id="homeContent">
-            <div id="icon"><img src="/resources/icon/icon.png" height="180px"></div>
+            <div id="icon"><img src="/resources/icon/icon.png" height="150px"></div>
             <div id="title">Aperture Photos</div>
             <div id="slogan">Defining photos to reminiscences</div>
         </div>
@@ -63,12 +63,12 @@
         <div class="titleMain">Our Work</div>
 
         <div id="workContent" class="flex1">
-            <div class="kiri"><img src="resources/work pics/work2.jpg" width="450px"></div>
+            <div class="kiri"><img src="resources/work pics/work2.jpg" width="370px"></div>
             <div class="flex2">
-                <div class="flag"><img src="resources/work pics/work1.jpg" width="450px"></div>
-                <div><img src="resources/work pics/work4.jpg" width="450px"></div>
+                <div class="flag"><img src="resources/work pics/work1.jpg" width="370px"></div>
+                <div class="flag2"><img src="resources/work pics/work4.jpg" width="370px"></div>
             </div>
-            <div class="kanan"><img src="resources/work pics/work3.jpg" width="450px"></div>
+            <div class="kanan"><img src="resources/work pics/work3.jpg" width="370px"></div>
         </div>
 
     </div>
@@ -103,14 +103,14 @@
             <div id="design">
                 <div>Design and Manage by:</div>
                 <div id="designContent">
-                    <div><img src="/resources/icon/icon.png" alt="" width="80px"></div>
+                    <div><img src="/resources/icon/icon.png" alt="" width="50px"></div>
                     <div>Apeture Photos</div>
                 </div>
             </div>
             <div id="created">
                 <div>Created by:</div>
                 <div id="createdContent">
-                    <div><img src="/resources/icon/logo.png" alt="" height="35px"></div>
+                    <div><img src="/resources/icon/logo.png" alt="" height="25px"></div>
             
                 </div>
             </div>
