--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
-<link href="/css/style.css" rel="stylesheet" type="text/css">
+<link href="/css/style.css" rel="stylesheet" type="text/css" >
+<!-- <link href="/css/stylePhone.css" rel="stylesheet" type="text/css"> -->
 
 <body>
 
@@ -34,7 +35,7 @@
 
     <div class="parent home" id="1">
         <div class="sectionContainer" id="homeContainer"></div>
-
+        
         <div id="homeContent">
             <div id="icon"><img src="/resources/icon/icon.png" height="150px"></div>
             <div id="title">Aperture Photos</div>
